hphp/hack/test/typecheck/unsafe_cast/arity_error.php.like_types.exp
File "arity_error.php", line 4, characters 10-45:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 4, characters 10-45:
Too few arguments (required 1 but got 0) (Typing[4104])
  File "soundness.hhi", line 7, characters 10-20:
  Definition is here
File "arity_error.php", line 8, characters 10-52:
This cast violates type safety and may lead to unexpected behavior at runtime. (Typing[4417])
File "arity_error.php", line 8, characters 10-52:
Too many arguments (expected 1 but got 2) (Typing[4105])
  File "soundness.hhi", line 7, characters 10-20:
  Definition is here
